--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "server": "nodemon index.js --ignore client",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run client\" \"npm run server\""
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "deploy": "npm run build&&gh-pages -d build",
+    "build": "whatever-command-you-want-npm-to-run"
   },
   "author": "Brad Traversy",
   "license": "MIT",
